# python_graphql_operations_codegen_demo

./: codegen.yml  package.json  pyproject.toml
python_graphql_operations_codegen_demo/: start.py
python_graphql_operations_codegen_demo/graphql/: characters.graphql  characters_generated.py  tests.graphql  tests_generated.py
python_graphql_operations_codegen_demo/graphql_generated/: schema.graphql  types_generated.py
server/: index.js  package.json
